zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__git_diff_scrollup.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (W): 
01 (W): src/terminal_pane/scroll.rs
02 (W): ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────
03 (C): 
04 (C): ────────────────────────────────────────────────┐
05 (C): use crate::terminal_pane::terminal_character::{ │
06 (C): ────────────────────────────────────────────────┘
07 (C): 5
08 (C):     CharacterStyles, TerminalCharacter, EMPTY_TERMINAL_CHARACTER,
09 (C): };
10 (C): 
11 (C): use crate::utils::logging::debug_log_to_file;                                                                                                        
12 (C):                                                                                                                                                      
13 (C): /*
14 (C):  * Scroll
15 (C):  *
16 (C): 
17 (C): ──────────────┐
18 (C): impl Scroll { │
19 (C): ──────────────┘
20 (C): 663
21 (C):     pub fn move_current_buffer_to_alternative_buffer(&mut self) {
22 (C):         self.alternative_buffer = Some(self.canonical_lines.drain(..).collect());
23 (C):         self.alternative_cursor_position = Some(self.cursor_position);
24 (C):         self.cursor_position.reset();                                                                                                                
25 (C):         self.clear_all();                                                                                                                            
26 (C):     }
27 (C): :                                                                                                                                                    

