zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__git_log.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C):     
01 (C):     * wip: doesn't render when new tab is created?
02 (C):     
03 (C):     * wip: doesnt re-render when a new tab is spawned for now
04 (C):     
05 (C):     * wip: tabs now are a BTreeMap and we can switch between them in both directions
06 (C):     
07 (C):     * wip: I think that should also be here
08 (C):     
09 (C):     * wip: cleanup
10 (C):     
11 (C):     * Spawn a new terminal simultaneously with a new tab
12 (C):     
13 (C):     * Ensure proper Opening and Closing of tabs
14 (C):     
15 (C):     * cleanup
16 (C):     
17 (C):     * more cleanup
18 (C):     
19 (C):     * tests(snapshots): add 'loading' snapshot to each scenario
20 (C):     
21 (C):     * fix(tests): update snapshots
22 (C):     
23 (C):     * Add tests for tabs implementation
24 (C):     
25 (C):     * wip: added tests, moved tab related stuff to a separate file
26 (C):     
27 (C): :                                                                                                                                                    

