zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__insert_wide_characters_in_existing_line.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): jinho@pochita /home/jinho/Documents/Temp/zellij/Chinese/第二                          
01 (C):  Chinese   第一                        0  empty                                       
02 (C):            第三                        0                                              
03 (C):            第二                        0                                              
04 (C):            第五                        0                                              
05 (C):            第四                        0                                              
06 (C):            zellij-11.log          1.85 K                                              
07 (C):            zellij.log              979 B                                              
08 (C):                                                                                       
09 (C):                                                                                       
10 (C):                                                                                       
11 (C):                                                                                       
12 (C):                                                                                       
13 (C):                                                                                       
14 (C):                                                                                       
15 (C):                                                                                       
16 (C):                                                                                       
17 (C):                                                                                       
18 (C):                                                                                       
19 (C):                                                                                       
20 (C): drwxr-xr-x 2 jinho jinho 0 2021-10-13 10:31              2.8K sum, 933G free  3/7  All

